[project]
name = "tape-record-helpers"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["xspf-lib (>=0.3.4,<0.4.0)", "mutagen (>=1.47.0,<2.0.0)"]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 160

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
